--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
