build(deps): add cocoadebugger

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,8 @@ end
 target 'CineSearch' do
   config = use_native_modules!
 
+  pod 'CocoaDebug', :configurations => ['Debug']
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
